# intern_test_task

./: README.md
version_pure/client/: CMakeLists.txt  main.cpp  sock.cpp
version_pure/client/headers/: sock.h
version_pure/server/: CMakeLists.txt  main.cpp  server.cpp  sock.cpp  solve.cpp
version_pure/server/headers/: check.h  server.h  sock.h  solve.h
version_zmq/client/: CMakeLists.txt  main.cpp  sock.cpp
version_zmq/client/headers/: sock.hpp
version_zmq/server/: CMakeLists.txt  check.cpp  main.cpp  server.cpp  sock.cpp  solve.cpp
version_zmq/server/headers/: server.h  solve.h
